--- a/naganocake-rails6/app/views/admin/genres/index.html.erb
+++ b/naganocake-rails6/app/views/admin/genres/index.html.erb
@@ -1,5 +1,7 @@
 <h1>ジャンル一覧・追加</h1>
 <%= form_with model: Genre.new ,url: admin_genres_path do |f| %>
+<%#= form_with model: Genre.new do |f| %> 
+<!-- modelがcontrollerのアクションに結びついてるので、今回がviewがindexなのでgeners_pathが自動生成されてしまう -->
   <%= f.label :name, "ジャンル名" %>
   <%= f.text_field :name %>
   <%= f.submit "新規登録" %>
